; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32/test/extr_test_dport.c_accessDPORT.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32/test/extr_test_dport.c_accessDPORT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DPORT_DATE_REG = common dso_local global i32 0, align 4
@dport_test_result = common dso_local global i32 0, align 4
@exit_flag = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @accessDPORT to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @accessDPORT(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to i32*
  store i32* %6, i32** %3, align 8
  %7 = load i32, i32* @DPORT_DATE_REG, align 4
  %8 = call i64 @DPORT_REG_READ(i32 %7)
  store i64 %8, i64* %4, align 8
  store i32 1, i32* @dport_test_result, align 4
  br label %9

9:                                                ; preds = %18, %1
  %10 = load i32, i32* @exit_flag, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %9
  %13 = load i64, i64* %4, align 8
  %14 = load i32, i32* @DPORT_DATE_REG, align 4
  %15 = call i64 @DPORT_REG_READ(i32 %14)
  %16 = icmp ne i64 %13, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i32 0, i32* @dport_test_result, align 4
  br label %19

18:                                               ; preds = %12
  br label %9

19:                                               ; preds = %17, %9
  %20 = load i32*, i32** %3, align 8
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @xSemaphoreGive(i32 %21)
  %23 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i64 @DPORT_REG_READ(i32) #1

declare dso_local i32 @xSemaphoreGive(i32) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
